Fixed bug that was clipping nav detail dropdown

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -66,7 +66,6 @@
     margin-bottom: 20%;
     max-width: 50px;
     max-height: 100px;
-    padding: 0.5em 0.8em 0.5em 0.8em;
 }
 
 @media only screen and (min-width: 1000px) {
